--- a/po/ar.po
+++ b/po/ar.po
@@ -1,222 +1,173 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-#
+# 
 # Translators:
 # Abdelkarim Guettaf <gkraim@gmail.com>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: device-driver-manager\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-01-18 17:37+0100\n"
+"POT-Creation-Date: 2015-12-07 10:57+0100\n"
 "PO-Revision-Date: 2016-01-18 10:50+0000\n"
 "Last-Translator: Arjen Balfoort <schoelje@solydxk.com>\n"
-"Language-Team: Arabic (http://www.transifex.com/solydxk/device-driver-"
-"manager/language/ar/)\n"
-"Language: ar\n"
+"Language-Team: Arabic (http://www.transifex.com/solydxk/device-driver-manager/language/ar/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=6; plural=n==0 ? 0 : n==1 ? 1 : n==2 ? 2 : n%100>=3 "
-"&& n%100<=10 ? 3 : n%100>=11 && n%100<=99 ? 4 : 5;\n"
+"Language: ar\n"
+"Plural-Forms: nplurals=6; plural=n==0 ? 0 : n==1 ? 1 : n==2 ? 2 : n%100>=3 && n%100<=10 ? 3 : n%100>=11 && n%100<=99 ? 4 : 5;\n"
 
-#: ../usr/lib/ddm/ddm.py:52 ../usr/lib/ddm/main.py:32
+#: ../usr/lib/ddm/ddm.py:55 ../usr/lib/ddm/main.py:32
 #: ../usr/share/kde4/services/kcm_device_driver_manager.desktop.in.h:1
 #: ../usr/share/applications/ddm.desktop.in.h:1
 msgid "Device Driver Manager"
 msgstr "مدير تعريف الأجهزة"
 
-#: ../usr/lib/ddm/ddm.py:53 ../usr/lib/ddm/ddm.py:212
+#: ../usr/lib/ddm/ddm.py:56 ../usr/lib/ddm/ddm.py:215
 msgid "Install"
 msgstr "التثبيت"
 
-#: ../usr/lib/ddm/ddm.py:54
+#: ../usr/lib/ddm/ddm.py:57
 msgid "Help"
 msgstr "مساعدة"
 
-#: ../usr/lib/ddm/ddm.py:55
+#: ../usr/lib/ddm/ddm.py:58
 msgid "Quit"
 msgstr "خروج"
 
-#: ../usr/lib/ddm/ddm.py:56
+#: ../usr/lib/ddm/ddm.py:59
 msgid "Use Backports"
 msgstr "استخدم مستودع باكبورتس"
 
-#: ../usr/lib/ddm/ddm.py:169
+#: ../usr/lib/ddm/ddm.py:172
 msgid "No internet connection"
 msgstr "لا يوجد اتصال بالإنترنت"
 
-#: ../usr/lib/ddm/ddm.py:170
+#: ../usr/lib/ddm/ddm.py:173
 msgid ""
 "You need an internet connection to install the additional software.\n"
 "Please, connect to the internet and try again."
-msgstr ""
-"تحتاج لاتصال بالإنترنت لتثبيت البرامج الإضافية.\n"
-"من فضلك، اتّصل بالإنترنت وحاول مرة أخرى."
+msgstr "تحتاج لاتصال بالإنترنت لتثبيت البرامج الإضافية.\nمن فضلك، اتّصل بالإنترنت وحاول مرة أخرى."
 
-#: ../usr/lib/ddm/ddm.py:177
+#: ../usr/lib/ddm/ddm.py:180
 msgid ""
-"You have selected to install drivers from the backports repository whenever "
-"they are available.\n"
+"You have selected to install drivers from the backports repository whenever they are available.\n"
 "\n"
-"Although you can run more up to date software using the backports "
-"repository,\n"
+"Although you can run more up to date software using the backports repository,\n"
 "you introduce a greater risk of breakage doing so.\n"
 "\n"
 "Are you sure you want to continue?"
-msgstr ""
-"لقد قمت بتحديد تثبيت التعريفات من مستودع باكبورتس متى توفرت.\n"
-"\n"
-"رغم أنه يمكنك تشغيل برامج أكثر حداثة باستخدام مستودع باكبورتس\n"
-"إلّا أنه قد تزيد من إحتمالية وقوع النظام بفعل ذلك.\n"
-"\n"
-"هل أنت متأكد من أنك تريد المتابعة؟"
+msgstr "لقد قمت بتحديد تثبيت التعريفات من مستودع باكبورتس متى توفرت.\n\nرغم أنه يمكنك تشغيل برامج أكثر حداثة باستخدام مستودع باكبورتس\nإلّا أنه قد تزيد من إحتمالية وقوع النظام بفعل ذلك.\n\nهل أنت متأكد من أنك تريد المتابعة؟"
 
-#: ../usr/lib/ddm/ddm.py:212
+#: ../usr/lib/ddm/ddm.py:215
 msgid "Device"
 msgstr "الجهاز"
 
-#: ../usr/lib/ddm/ddm.py:228
+#: ../usr/lib/ddm/ddm.py:231
 msgid "Remove kernel"
 msgstr "إزالة النواة"
 
-#: ../usr/lib/ddm/ddm.py:229
+#: ../usr/lib/ddm/ddm.py:232
 msgid ""
 "You cannot remove a booted kernel.\n"
 "Please, boot another kernel and try again."
-msgstr ""
-"لا يمكنك إزالة النواة المستخدمة حاليا.\n"
-"من فضلك، حاول بعد إعادة التشغيل بنواة أخرى."
+msgstr "لا يمكنك إزالة النواة المستخدمة حاليا.\nمن فضلك، حاول بعد إعادة التشغيل بنواة أخرى."
 
-#: ../usr/lib/ddm/ddm.py:250
+#: ../usr/lib/ddm/ddm.py:253
 msgid "Hardware scan"
 msgstr "تفحص الأجهزة"
 
-#: ../usr/lib/ddm/ddm.py:254
+#: ../usr/lib/ddm/ddm.py:257
 msgid "There are no available drivers for your hardware:"
 msgstr "لا توجد تعريفات متوفرة لعتادك:"
 
-#: ../usr/lib/ddm/ddm.py:260
+#: ../usr/lib/ddm/ddm.py:263
 msgid "DDM did not find any supported hardware."
 msgstr "لم يعثر مدير التعريف على أي عتاد مدعوم."
 
-#: ../usr/lib/ddm/ddm.py:359
+#: ../usr/lib/ddm/ddm.py:362
 msgid "ATI FirePro/Gl card found"
 msgstr "وجِدت بطاقة ATI FirePro/Gl"
 
-#: ../usr/lib/ddm/ddm.py:360
+#: ../usr/lib/ddm/ddm.py:363
 msgid ""
-"Installing the proprietary driver for an ATI FirePro/Gl card may render your "
-"system unbootable.\n"
+"Installing the proprietary driver for an ATI FirePro/Gl card may render your system unbootable.\n"
 "\n"
 "Proceed at your own risk."
-msgstr ""
-<<<<<<< HEAD
-"تثبيت التعريف المغلق الخاص ببطاقة ATI FirePro/Gl قد يجعل نظامك غير قابل "
-"للإقلاع.\n"
-=======
-"تثبيت التعريف المغلق الخاص ببطاقة ATI FirePro/Gl قد يجعل نظامك غير قابل للإقلاع.\n"
->>>>>>> fdae6cfec68a754a343c5d7067de01887b269338
-"\n"
-"المتابعة على مسؤوليتك."
+msgstr "تثبيت التعريف المغلق الخاص ببطاقة ATI FirePro/Gl قد يجعل نظامك غير قابل للإقلاع.\n\nالمتابعة على مسؤوليتك."
 
-#: ../usr/lib/ddm/ddm.py:530
+#: ../usr/lib/ddm/ddm.py:533
 msgid "PAE capable system"
 msgstr "النظام يدعم PAE"
 
-#: ../usr/lib/ddm/ddm.py:643
+#: ../usr/lib/ddm/ddm.py:646
 msgid "Run as root."
 msgstr "شغِّل كجذر."
 
-#: ../usr/lib/ddm/ddm.py:645
+#: ../usr/lib/ddm/ddm.py:648
 msgid "Wrong arguments passed to ddm."
 msgstr "معاملات خاطئة مرِّرت لـ ddm."
 
-#: ../usr/lib/ddm/ddm.py:647
+#: ../usr/lib/ddm/ddm.py:650
 msgid "There are no driver available."
 msgstr ".لا يوجد أي تعريف متاح"
 
-#: ../usr/lib/ddm/ddm.py:649
+#: ../usr/lib/ddm/ddm.py:652
 msgid "The driver cannot be found in repository."
 msgstr "تعذّر العثور على تعريف في المستودع"
 
-<<<<<<< HEAD
-#: ../usr/lib/ddm/ddm.py:651
-=======
 #: ../usr/lib/ddm/ddm.py:654
->>>>>>> fdae6cfec68a754a343c5d7067de01887b269338
 msgid ""
 "Download error.\n"
 "Check your internet connection."
-msgstr ""
-"خطأ في التنزيل.\n"
-"تحقق من اتصال الإنترنت الخاص بك."
+msgstr "خطأ في التنزيل.\nتحقق من اتصال الإنترنت الخاص بك."
 
-#: ../usr/lib/ddm/ddm.py:653
+#: ../usr/lib/ddm/ddm.py:656
 msgid "DDM cannot purge the driver."
 msgstr ".لا يمكن لبرنامج الإعداد إزالة التعريف"
 
-#: ../usr/lib/ddm/ddm.py:655
+#: ../usr/lib/ddm/ddm.py:658
 msgid "This card is not supported."
 msgstr "هذه البطاقة غير مدعومة."
 
-#: ../usr/lib/ddm/ddm.py:657
+#: ../usr/lib/ddm/ddm.py:660
 msgid ""
 "There was an error during the installation.\n"
 "Please, run 'sudo apt-get -f install' in a terminal.\n"
 "Visit our forum for support: http://forums.solydxk.com"
-msgstr ""
-"حدث خطأ أثناء التثبيت.\n"
-"من فضلك، شغّل 'sudo apt-get -f install' على الطرفية.\n"
-"يمكنك زيارة منتدانا للحصول على الدعم: http://forums.solydxk.com"
+msgstr "حدث خطأ أثناء التثبيت.\nمن فضلك، شغّل 'sudo apt-get -f install' على الطرفية.\nيمكنك زيارة منتدانا للحصول على الدعم: http://forums.solydxk.com"
 
-#: ../usr/lib/ddm/ddm.py:662
+#: ../usr/lib/ddm/ddm.py:665
 msgid "The software has been successfully installed."
 msgstr "تم تثبيت البرنامج بنجاح."
 
-#: ../usr/lib/ddm/ddm.py:663
+#: ../usr/lib/ddm/ddm.py:666
 msgid "You will need to restart your system."
 msgstr "ستحتاج لإعادة تشغيل نظامك."
 
 #: ../usr/lib/ddm/main.py:33
 msgid ""
-"Device Driver Manager helps to install proprietary drivers for your "
-"hardware.\n"
+"Device Driver Manager helps to install proprietary drivers for your hardware.\n"
 "Only install proprietary drivers if you are sure you really need them.\n"
 "Usually open drivers are enough."
-msgstr ""
-<<<<<<< HEAD
-"يساعدك مدير تعريفات الأجهزة على تثبيت التعريف الخاص بالمصنع لعتادك.\n"
-=======
-"يساعدك مدير تعريفات الأجهزة على تثبيت التعريف الخاص بالمصنع "
-"لعتادك.\n"
->>>>>>> fdae6cfec68a754a343c5d7067de01887b269338
-"ثبّت التعريف الخاص بالمصنع فقط إذا كنت متأكد من حاجتك له.\n"
-"غالبا ما يكون التعريف المفتوح كافيا."
+msgstr "يساعدك مدير تعريفات الأجهزة على تثبيت التعريف الخاص بالمصنع لعتادك.\nثبّت التعريف الخاص بالمصنع فقط إذا كنت متأكد من حاجتك له.\nغالبا ما يكون التعريف المفتوح كافيا."
 
 #: ../usr/lib/ddm/main.py:55
 msgid ""
 "Device Driver Manager cannot be started in a live environment\n"
 "You can use the --force argument to start DDM in a live environment"
-msgstr ""
-"لا يمكن تشغيل مدير تعريف الأجهزة في بيئة حية\n"
-"يمكنك استخدام المعامل --force لبدء DDM في بيئة حية"
+msgstr "لا يمكن تشغيل مدير تعريف الأجهزة في بيئة حية\nيمكنك استخدام المعامل --force لبدء DDM في بيئة حية"
 
-#: ../usr/lib/ddm/main.py:83
+#: ../usr/lib/ddm/main.py:82
 msgid "Unexpected error"
 msgstr "خطأ غير متوقع"
 
-#: ../usr/lib/ddm/main.py:84
+#: ../usr/lib/ddm/main.py:83
 msgid ""
 "DDM has failed with the following unexpected error. Please submit a bug "
 "report!"
-msgstr ""
-<<<<<<< HEAD
-"فشل مدير تعريف الأجهزة مع الخطأ غير المتوقع التالي. يرجى تقديم تقرير عن وجود "
-"علّة!"
-=======
-"فشل مدير تعريف الأجهزة مع الخطأ غير المتوقع التالي. يرجى تقديم تقرير عن وجود علّة!"
->>>>>>> fdae6cfec68a754a343c5d7067de01887b269338
+msgstr "فشل مدير تعريف الأجهزة مع الخطأ غير المتوقع التالي. يرجى تقديم تقرير عن وجود علّة!"
 
 #: en/help.html+html.body.h1:8
 msgid "Device Driver Manager Help"
@@ -232,12 +183,8 @@ msgid ""
 "hardware drivers. Currently Nvidia, ATI and Broadcom drivers can be "
 "installed and allows to install the PAE kernel for multi-core 32-bit "
 "systems. The Device Driver Manager will only list those devices that are "
-"supported. It will not list any other devices than mentioned above."
+"supported. It will not list any other devices then mentioned above."
 msgstr ""
-"مدير تعريف الأجهزة هو أداة تساعد المستخدمين على تثبيت تعريفات العتاد من جهات أخرى. "
-"حاليا يمكنك من تثبيت تعريفات Nvidia، ATI وBroadcom ويسمح بتثبيت نواة PAE "
-"للأنظمة متعددة الأنوية على معمارية 32 بت. سيقوم مدير تعريف الأجهزة بعرض الأجهزة المدعومة فقط."
-"لذا لن يدرج أية أجهزة أخرى غير المذكورة أعلاه."
 
 #: en/help.html+html.body.div.h2:13
 msgid "Important"
@@ -248,12 +195,8 @@ msgid ""
 "The Device Driver Manager can only install drivers which are available in "
 "the repositories. Make sure you have an internet connection if you want to "
 "install the drivers."
-msgstr ""
-"يمكن لمدير تعريف الأجهزة أن يثبت التعريفات المتوفرة بالمستودعات فقط. تأكد أن "
-"لديك اتصالا بالإنترنت إذا كنت تريد تثبيت التعريفات."
+msgstr "يمكن لمدير تعريف الأجهزة أن يثبت التعريفات المتوفرة بالمستودعات فقط. تأكد أن لديك اتصالا بالإنترنت إذا كنت تريد تثبيت التعريفات."
 
-"يمكن لمدير تعريف الأجهزة أن يثبت التعريفات المتوفرة بالمستودعات فقط. "
-"تأكد أن لديك اتصالا بالإنترنت إذا كنت تريد تثبيت التعريفات."
 #: en/help.html+html.body.div.h2:16
 msgid "Commands"
 msgstr "تعليمات"
@@ -262,8 +205,7 @@ msgstr "تعليمات"
 msgid ""
 "If you prefer to install the drivers by terminal, you can use the following "
 "commands:"
-msgstr ""
-"إذا كنت تفضل تثبيت التعريفات عبر الطرفية يمكنك استخدام التعليمات التالية:"
+msgstr "إذا كنت تفضل تثبيت التعريفات عبر الطرفية يمكنك استخدام التعليمات التالية:"
 
 #: en/help.html+html.body.div.h3:21
 msgid "# ddm -i ati"
@@ -275,17 +217,7 @@ msgid ""
 "from version HD 5000 and up are supported by the fglrx drivers. Versions "
 "between 1000 and 5000 will use the Radeon drivers. Use \"ddm -p ati\" to "
 "remove the drivers from your system."
-msgstr ""
-<<<<<<< HEAD
-"هذا سيثبت تعريفات fglrx لبطاقة ATI الخاصة بك. بطاقات ATI من الإصدار HD 5000 "
-"فما فوق مدعومة من طرف تعريف fglrx. الإصدارات من 1000 إلى 5000 ستستخدم "
-"تعريفات Radeon. استخدم \"ddm -p ati\" لإزالة التعريف من نظامك."
-=======
-"هذا سيثبت تعريفات fglrx لبطاقة ATI الخاصة بك. بطاقات ATI "
-"من الإصدار HD 5000 فما فوق مدعومة من طرف تعريف fglrx. الإصدارات "
-"من 1000 إلى 5000 ستستخدم تعريفات Radeon. استخدم \"ddm -p ati\" لإزالة "
-"التعريف من نظامك."
->>>>>>> fdae6cfec68a754a343c5d7067de01887b269338
+msgstr "هذا سيثبت تعريفات fglrx لبطاقة ATI الخاصة بك. بطاقات ATI من الإصدار HD 5000 فما فوق مدعومة من طرف تعريف fglrx. الإصدارات من 1000 إلى 5000 ستستخدم تعريفات Radeon. استخدم \"ddm -p ati\" لإزالة التعريف من نظامك."
 
 #: en/help.html+html.body.div.h3:24
 msgid "# ddm -i nvidia"
@@ -294,12 +226,9 @@ msgstr "# ddm -i nvidia"
 #: en/help.html+html.body.div.p:25
 msgid ""
 "This will select the right drivers for your Nvidia graphical card. It will "
-"select the Bumblebee drivers in case you have a hybrid card (both Nvidia and "
-"Intel). Use \"ddm -p nvidia\" to remove the drivers from your system."
-msgstr ""
-"سيؤدي هذا إلى تحديد التعريف الصحيح لبطاقة الرسوميات أنفيديا الخاصة بك. "
-"وسيقوم بتحديد تعريف Bumblebee في حال ما إذا كانت لديك بطاقة رسومية هجينة "
-"(أنفيديا و إنتل معا). استخدم \"ddm -p nvidia\" لإزالة التعريف من نظامك."
+"select the Bumblebee drivers in case you have a hybrid card (both Nvidia and"
+" Intel). Use \"ddm -p nvidia\" to remove the drivers from your system."
+msgstr "سيؤدي هذا إلى تحديد التعريف الصحيح لبطاقة الرسوميات أنفيديا الخاصة بك. وسيقوم بتحديد تعريف Bumblebee في حال ما إذا كانت لديك بطاقة رسومية هجينة (أنفيديا و إنتل معا). استخدم \"ddm -p nvidia\" لإزالة التعريف من نظامك."
 
 #: en/help.html+html.body.div.h3:27
 msgid "# ddm -i open"
@@ -309,9 +238,7 @@ msgstr "# ddm -i open"
 msgid ""
 "You can use this command if you want to revert back to the open Nouveau "
 "drivers. It will remove any proprietary drivers from your system."
-msgstr ""
-"يمكنك إستخدام هذه التعليمة إذا أردت العودة إلى التعريف المفتوح (Nouveau). "
-"هذا سيزيل أي تعريف خاص بالمصنع من نظامك."
+msgstr "يمكنك إستخدام هذه التعليمة إذا أردت العودة إلى التعريف المفتوح (Nouveau). هذا سيزيل أي تعريف خاص بالمصنع من نظامك."
 
 #: en/help.html+html.body.div.h3:30
 msgid "# ddm -i broadcom"
@@ -321,9 +248,7 @@ msgstr "# ddm -i broadcom"
 msgid ""
 "This command will install the right driver for your wireless Broadcom "
 "adapter. Use \"ddm -p broadcom\" to remove the drivers from your system."
-msgstr ""
-"هذا الأمر سيقوم بتثبيت التعريف المناسب لبطاقة الشبكة اللاسلكية Broadcom "
-"الخاصة بك. استخدم \"ddm -p broadcom\" لإزالة التعريف من نظامك."
+msgstr "هذا الأمر سيقوم بتثبيت التعريف المناسب لبطاقة الشبكة اللاسلكية Broadcom الخاصة بك. استخدم \"ddm -p broadcom\" لإزالة التعريف من نظامك."
 
 #: en/help.html+html.body.div.h3:33
 msgid "# ddm -i pae"
@@ -331,19 +256,11 @@ msgstr "# ddm -i pae"
 
 #: en/help.html+html.body.div.p:34
 msgid ""
-"This will install the PAE kernel on multi-processor systems running a 32-bit "
-"OS. Use \"ddm -p pae\" to remove the PAE kernel from your system. Note that "
-"you cannot remove the kernel when you are currently booted into that kernel."
-msgstr ""
-<<<<<<< HEAD
-"سيقوم هذا بتثبيت نواة PAE للأنظمة متعددة الأنوية على معمارية 32 بتاستخدم "
-"\"ddm -p pae\" لإزالة نواة PAE من نظامك. لاحظ أنه لا يمكن حذف هذه النواة إذا "
-"كنت حاليا قد أقلعت باستخدامها."
-=======
-"سيقوم هذا بتثبيت نواة PAE للأنظمة متعددة الأنوية على معمارية 32 بت"
-"استخدم \"ddm -p pae\" لإزالة نواة PAE من نظامك. لاحظ أنه "
-"لا يمكن حذف هذه النواة إذا كنت حاليا قد أقلعت باستخدامها."
->>>>>>> fdae6cfec68a754a343c5d7067de01887b269338
+"This will install the PAE kernel on multi-processor systems running a 32-bit"
+" OS. Use \"ddm -p pae\" to remove the PAE kernel from your system. Note that"
+" you cannot remove the kernel when you are currently booted into that "
+"kernel."
+msgstr "سيقوم هذا بتثبيت نواة PAE للأنظمة متعددة الأنوية على معمارية 32 بتاستخدم \"ddm -p pae\" لإزالة نواة PAE من نظامك. لاحظ أنه لا يمكن حذف هذه النواة إذا كنت حاليا قد أقلعت باستخدامها."
 
 #: en/help.html+html.body.div.h3:36
 msgid "# ddm -i fixbumblebee"
@@ -363,13 +280,7 @@ msgstr "الملف: /var/log/ddm.log"
 
 #: en/help.html+html.body.div.p:41
 msgid ""
-"Please, attach your log file when you post an issue on our forum: <a href="
-"\"http://forums.solydxk.com\" target=\"_blank\">http://forums.solydxk.com</a>"
-msgstr ""
-<<<<<<< HEAD
-"يرجى إرفاق ملف السجل الخاص بك عند إضافة مشكلة على منتدانا: <a href=\"http://"
-"forums.solydxk.com\" target=\"_blank\">http://forums.solydxk.com</a>"
-=======
-"يرجى إرفاق ملف السجل الخاص بك عند إضافة مشكلة على منتدانا: <a href="
-"\"http://forums.solydxk.com\" target=\"_blank\">http://forums.solydxk.com</a>"
->>>>>>> fdae6cfec68a754a343c5d7067de01887b269338
+"Please, attach your log file when you post an issue on our forum: <a "
+"href=\"http://forums.solydxk.com\" "
+"target=\"_blank\">http://forums.solydxk.com</a>"
+msgstr "يرجى إرفاق ملف السجل الخاص بك عند إضافة مشكلة على منتدانا: <a href=\"http://forums.solydxk.com\" target=\"_blank\">http://forums.solydxk.com</a>"
